--- a/playground/docker/tempest/test_rundiagnostic.ipynb
+++ b/playground/docker/tempest/test_rundiagnostic.ipynb
@@ -6,44 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import yaml\n",
-    "\n",
-    "# Import directory setting and volumes to mount from machine.yaml\n",
-    "with open(r'machine.yaml') as file:\n",
-    "    machinecfg = yaml.load(file, Loader=yaml.FullLoader)\n",
-    "\n",
-    "# Transform volumes dict into \"host=bind\" strings \n",
-    "volume_list = []\n",
-    "for key, value in machinecfg['volumes'].items():\n",
-    "    volume_list += [f'{value}:/{key}']\n",
-    "\n",
-    "# Import parameters needed to render templates\n",
-    "with open(r'diagnostic.yaml') as file:\n",
-    "    diagcfg = yaml.load(file, Loader=yaml.FullLoader)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from jinja2 import Template, FileSystemLoader, Environment\n",
-    "import os\n",
-    "\n",
-    "templateLoader = FileSystemLoader(searchpath=\"./templates\")\n",
-    "templateEnv = Environment(loader=templateLoader)\n",
-    "\n",
-    "# Now use jinja2 to render al top-level keys in recipe file\n",
-    "# as templates into actual recipes, config files etc.\n",
-    "\n",
-    "for k in diagcfg:\n",
-    "    dest_file = os.path.join(machinecfg['volumes'][diagcfg[k]['target_volume']], diagcfg[k]['filename'])\n",
-    "    template_file = diagcfg[k]['template']\n",
-    "    template = templateEnv.get_template(template_file)\n",
-    "    template.stream(diagcfg[k]['parameters']).dump(dest_file)\n",
-    "    "
+    "# Temporary hack\n",
+    "import sys\n",
+    "sys.path.append(\"/work/users/jost/aqua/AQUA\")\n",
+    "import aqua"
    ]
   },
   {
@@ -52,14 +18,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run actual diagnostic docker\n",
-    "\n",
-    "import docker\n",
-    "client = docker.from_env()\n",
-    "output = client.containers.run(image=machinecfg['image'],\n",
-    "                      command=machinecfg['command'], \n",
-    "                      volumes=volume_list, \n",
-    "                      environment=machinecfg['environment'])\n"
+    "# Use this diagnostic to test the new aqua.docker.rundiag() function\n",
+    "# Everything is defined in the diagnostic.yaml and machine.yaml files\n",
+    "# If no argument provided then the first command defined in machine.yaml is run\n",
+    "#output = aqua.docker.rundiag(cmd=\"detect\")\n",
+    "detect_out = aqua.docker.rundiag(cmd=\"detect\")\n",
+    "stitch_out = aqua.docker.rundiag(cmd=\"stitch\")"
    ]
   },
   {
