--- a/playground/docker/tempest/test_rundiagnostic.ipynb
+++ b/playground/docker/tempest/test_rundiagnostic.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "# Use this diagnostic to test the new aqua.docker.rundiag() function\n",
     "# Everything is defined in the diagnostic.yaml and machine.yaml files\n",
-    "# If no argument provided then the first command defined in machine.yaml is run\n",
+    "# If no argument is provided then the first command defined in machine.yaml is run\n",
     "#output = aqua.docker.rundiag(cmd=\"detect\")\n",
     "detect_out = aqua.docker.rundiag(cmd=\"detect\")\n",
     "stitch_out = aqua.docker.rundiag(cmd=\"stitch\")"
