--- a/playground/docker/tempest/test_rundiagnostic.ipynb
+++ b/playground/docker/tempest/test_rundiagnostic.ipynb
@@ -8,13 +8,13 @@
    "source": [
     "# Temporary hack\n",
     "import sys\n",
-    "sys.path.append(\"/work/users/jost/aqua/AQUA\")\n",
+    "sys.path.append(\"../../..\")\n",
     "import aqua"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
