--- a/test_intake.ipynb
+++ b/test_intake.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reader = Reader(model=\"ICON\", exp=\"R02B09\", target=\"010\")\n",
+    "reader = Reader(model=\"ICON\", exp=\"R02B09\", regrid=\"010\")\n",
     "data = reader.retrieve()"
    ]
   },
