--- a/test_intake.ipynb
+++ b/test_intake.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The idea of this AQUA regridder draft is to provide a first common access point to data in order to quickly develop diagnostics. For now access is through intake catalogues of NextGEMS data, but the idea is to extend this to FDB access and other datasources in the future.\n",
+    "The idea of this AQUA reader draft is to provide a first common access point to data in order to quickly develop diagnostics. For now access is through intake catalogues of NextGEMS data, but the idea is to extend this to FDB access and other datasources in the future.\n",
     "\n",
     "It includes also regridding functionality. The idea of the regridder (which uses sparse matrix multiplication) is to generate first the weights for the interpolation (an operation which needs to be done only once) and then to use them for each regridding operation."
    ]
