--- a/test_intake.ipynb
+++ b/test_intake.ipynb
@@ -6825,12 +6825,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "reader = Reader(model=\"IFS\", exp=\"tco2559-ng5\", source=\"ICMGG_atm2d\", regrid=\"r020\")\n",
     "data = reader.retrieve()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "again, by deafault, the data are still on the raw original grid"
    ]
   },
   {
@@ -7425,8 +7433,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "... but we can now ask to regrid it (or parto of it) to the destination grid which we chose when we instantiated the reader."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7435,16 +7451,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7f0460237760>"
+       "<matplotlib.collections.QuadMesh at 0x7fe8aea82fd0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -7461,6 +7477,14 @@
    ],
    "source": [
     "tasr[0,:,:].plot()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice: You could ask to regrid them directly by specifying the argument `regrid=True` when reading the data, but please be warned that without a selection on dates this will take longer. It is usuallymore efficient to first load the data, select and then regrid. The option `regrid=True` for the reader will make sense probably for streamed data, if you know that you will want to regrid all of the input xarray anyway. The regridding is applied to a dask dataarray, so execution is delayed and one can select variables and periods of interest later, but still, it takes longer by asking to regrid everything at this stage. To be tested further."
    ]
   },
   {
