introducing decumulate() into the class

--- a/decumulate.ipynb
+++ b/decumulate.ipynb
@@ -30,8 +30,10 @@
     "    \"\"\"To check if a field need is cumulated. Arbitrary check\"\"\"\n",
     "\n",
     "    # randomly pick a few timesteps from a gridpoint\n",
-    "    diff = xfield[2:20,10].diff(dim='time').values\n",
-    "    return (diff >= 0).all()\n",
+    "    ndims = [dim for dim in xfield.dims if xfield[dim].size > 1][1:]\n",
+    "    pindex = {dim: 0 for dim in ndims}\n",
+    "    check = xfield.isel(pindex).isel(time=slice(None, 20)).diff(dim='time').values\n",
+    "    return (check >= 0).all()\n",
     "\n",
     "# so far this works, but it is very slow\n",
     "# evident problems are the loop and the deepcopy, it might be possible to simplify\n",
@@ -767,6 +769,40 @@
     "reader = Reader(model=\"IFS\", exp=\"tco2559-ng5\", source=\"ICMGG_atm2d\", regrid='r100')\n",
     "data = reader.retrieve(fix=False)\n",
     "xfield = data['tsr']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0.])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ndims = [dim for dim in xfield.dims if xfield[dim].size > 1][1:]\n",
+    "pindex = {dim: 0 for dim in ndims}\n",
+    "check = xfield.isel(pindex).isel(time=slice(None, 20)).diff(dim='time').values\n",
+    "check\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "xfield.isel(time=range(0,20)).diff(dim='time').values"
    ]
   },
   {
