added streaming notebook

--- a/notebooks/reader/main.ipynb
+++ b/notebooks/reader/main.ipynb
@@ -36,6 +36,7 @@
     "2. [Temporal averaging](timmean.ipynb)\n",
     "3. [Spatial (field) averaging](fldmean.ipynb)\n",
     "4. [Other datasets](datasets.ipynb)"
+    "5. [Streaming](streaming.ipynb)"
    ]
   },
   {
