--- a/notebooks/reader/main.ipynb
+++ b/notebooks/reader/main.ipynb
@@ -35,7 +35,7 @@
     "2. [Coordinate, variable name, units fixer](fixer.ipynb)\n",
     "2. [Temporal averaging](timmean.ipynb)\n",
     "3. [Spatial (field) averaging](fldmean.ipynb)\n",
-    "4. [Other datasets](datasets.ipynb)",
+    "4. [Other datasets](datasets.ipynb)\n",
     "5. [Streaming](streaming.ipynb)"
    ]
   },
