work only on existing variables

--- a/notebooks/reader/fixer.ipynb
+++ b/notebooks/reader/fixer.ipynb
@@ -15815,110 +15815,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Grib attributes for iews: {'paramId': '229', 'long_name': 'Instantaneous eastward turbulent surface stress', 'units': 'N m**-2', 'cfVarName': 'iews', 'shortName': 'iews'}\n",
-      "iews : N m-2 --> N m**-2\n",
-      "<class 'pint.util.Quantity'> <class 'pint.util.Quantity'>\n",
-      "Fixing tauu to iews. Unit fix: factor=1.0, offset=0\n",
-      "Grib attributes for inss: {'paramId': '230', 'long_name': 'Instantaneous northward turbulent surface stress', 'units': 'N m**-2', 'cfVarName': 'inss', 'shortName': 'inss'}\n",
-      "inss : N m-2 --> N m**-2\n",
-      "<class 'pint.util.Quantity'> <class 'pint.util.Quantity'>\n",
-      "Fixing tauv to inss. Unit fix: factor=1.0, offset=0\n",
-      "Grib attributes for skt: {'paramId': '235', 'long_name': 'Skin temperature', 'units': 'K', 'cfVarName': 'skt', 'shortName': 'skt'}\n",
-      "skt : K --> K\n",
-      "<class 'pint.util.Quantity'> <class 'pint.util.Quantity'>\n",
-      "Fixing ts to skt. Unit fix: factor=1.0, offset=0\n",
-      "Grib attributes for sp: {'paramId': '134', 'long_name': 'Surface pressure', 'units': 'Pa', 'cfVarName': 'sp', 'shortName': 'sp'}\n",
-      "sp : Pa --> Pa\n",
-      "<class 'pint.util.Quantity'> <class 'pint.util.Quantity'>\n",
-      "Fixing ps to sp. Unit fix: factor=1.0, offset=0\n",
-      "Grib attributes for msl: {'paramId': '151', 'long_name': 'Mean sea level pressure', 'units': 'Pa', 'cfVarName': 'msl', 'shortName': 'msl'}\n",
-      "msl : Pa --> Pa\n",
-      "<class 'pint.util.Quantity'> <class 'pint.util.Quantity'>\n",
-      "Fixing psl to msl. Unit fix: factor=1.0, offset=0\n",
-      "Grib attributes for 10si: {'paramId': '207', 'long_name': '10 metre wind speed', 'units': 'm s**-1', 'cfVarName': 'si10', 'shortName': '10si'}\n",
-      "10si : m s-1 --> m s**-1\n",
-      "<class 'pint.util.Quantity'> <class 'pint.util.Quantity'>\n",
-      "Fixing sfcwind to 10si. Unit fix: factor=1.0, offset=0\n",
-      "Grib attributes for ci: {'paramId': '31', 'long_name': 'Sea ice area fraction', 'units': '(0 - 1)', 'cfVarName': 'siconc', 'shortName': 'ci'}\n",
-      "ci : 1 --> 1\n",
-      "<class 'pint.util.Quantity'> <class 'pint.util.Quantity'>\n",
-      "Fixing sic to ci. Unit fix: factor=1.0, offset=0\n",
-      "Grib attributes for sithick: {'paramId': '262000', 'long_name': 'Sea ice thickness', 'units': 'm', 'cfVarName': 'sithick', 'shortName': 'sithick'}\n",
-      "sithick : m --> m\n",
-      "<class 'pint.util.Quantity'> <class 'pint.util.Quantity'>\n",
-      "Fixing sit to sithick. Unit fix: factor=1.0, offset=0\n",
-      "Grib attributes for 2t: {'paramId': '167', 'long_name': '2 metre temperature', 'units': 'K', 'cfVarName': 't2m', 'shortName': '2t'}\n",
-      "2t : K --> K\n",
-      "<class 'pint.util.Quantity'> <class 'pint.util.Quantity'>\n",
-      "Fixing tas to 2t. Unit fix: factor=1.0, offset=0\n",
-      "Grib attributes for 10u: {'paramId': '165', 'long_name': '10 metre U wind component', 'units': 'm s**-1', 'cfVarName': 'u10', 'shortName': '10u'}\n",
-      "10u : m s-1 --> m s**-1\n",
-      "<class 'pint.util.Quantity'> <class 'pint.util.Quantity'>\n",
-      "Fixing uas to 10u. Unit fix: factor=1.0, offset=0\n",
-      "Grib attributes for 10v: {'paramId': '166', 'long_name': '10 metre V wind component', 'units': 'm s**-1', 'cfVarName': 'v10', 'shortName': '10v'}\n",
-      "10v : m s-1 --> m s**-1\n",
-      "<class 'pint.util.Quantity'> <class 'pint.util.Quantity'>\n",
-      "Fixing vas to 10v. Unit fix: factor=1.0, offset=0\n",
-      "Grib attributes for tciw: {'paramId': '79', 'long_name': 'Total column cloud ice water', 'units': 'kg m**-2', 'cfVarName': 'tciw', 'shortName': 'tciw'}\n",
-      "tciw : kg m-2 --> kg m**-2\n",
-      "<class 'pint.util.Quantity'> <class 'pint.util.Quantity'>\n",
-      "Fixing clivi to tciw. Unit fix: factor=1.0, offset=0\n",
-      "Grib attributes for tclw: {'paramId': '78', 'long_name': 'Total column cloud liquid water', 'units': 'kg m**-2', 'cfVarName': 'tclw', 'shortName': 'tclw'}\n",
-      "tclw : kg m-2 --> kg m**-2\n",
-      "<class 'pint.util.Quantity'> <class 'pint.util.Quantity'>\n",
-      "Fixing cllvi to tclw. Unit fix: factor=1.0, offset=0\n",
-      "Derived mslhfl from 0-hfls\n",
-      "Grib attributes for mslhfl: {'derived': '0-hfls', 'paramId': '172147', 'long_name': 'Mean surface latent heat flux', 'units': 'W m**-2', 'cfVarName': 'mslhfl', 'shortName': 'mslhfl'}\n",
-      "mslhfl : W m-2 --> W m**-2\n",
-      "<class 'pint.util.Quantity'> <class 'pint.util.Quantity'>\n",
-      "Fixing mslhfl to mslhfl. Unit fix: factor=1.0, offset=0\n",
-      "Derived msshfl from 0-hfss\n",
-      "Grib attributes for msshfl: {'derived': '0-hfss', 'paramId': '172146', 'long_name': 'Mean surface sensible heat flux', 'units': 'W m**-2', 'cfVarName': 'msshfl', 'shortName': 'msshfl'}\n",
-      "msshfl : W m-2 --> W m**-2\n",
-      "<class 'pint.util.Quantity'> <class 'pint.util.Quantity'>\n",
-      "Fixing msshfl to msshfl. Unit fix: factor=1.0, offset=0\n",
       "Grib attributes for tprate: {'paramId': '172228', 'long_name': 'Mean total precipitation rate', 'units': 'm s**-1', 'cfVarName': 'tprate', 'shortName': 'tprate'}\n",
       "tprate : kg m-2 s-1 --> m s**-1\n",
       "<class 'pint.util.Quantity'> <class 'pint.util.Quantity'>\n",
       "tprate: corrected dividing by density of water 1000 kg m-3\n",
-      "Fixing pr to tprate. Unit fix: factor=0.001, offset=0\n",
-      "Grib attributes for mlsprt: {'paramId': '172142', 'long_name': 'Mean large-scale precipitation rate', 'units': 'm s**-1', 'cfVarName': 'mlsprt', 'shortName': 'mlsprt'}\n",
-      "mlsprt : kg m-2 s-1 --> m s**-1\n",
-      "<class 'pint.util.Quantity'> <class 'pint.util.Quantity'>\n",
-      "mlsprt: corrected dividing by density of water 1000 kg m-3\n",
-      "Fixing prlr to mlsprt. Unit fix: factor=0.001, offset=0\n",
-      "Grib attributes for tcwv: {'paramId': '137', 'long_name': 'Total column vertically-integrated water vapour', 'units': 'kg m**-2', 'cfVarName': 'tcwv', 'shortName': 'tcwv'}\n",
-      "tcwv : kg m-2 --> kg m**-2\n",
-      "<class 'pint.util.Quantity'> <class 'pint.util.Quantity'>\n",
-      "Fixing prw to tcwv. Unit fix: factor=1.0, offset=0\n",
-      "Grib attributes for msdtrf: {'paramId': '172175', 'long_name': 'Mean surface downward thermal radiation flux', 'units': 'W m**-2', 'cfVarName': 'msdtrf', 'shortName': 'msdtrf'}\n",
-      "msdtrf : W m-2 --> W m**-2\n",
-      "<class 'pint.util.Quantity'> <class 'pint.util.Quantity'>\n",
-      "Fixing rlds to msdtrf. Unit fix: factor=1.0, offset=0\n",
-      "Derived msntrf from rlds-rlus\n",
-      "Grib attributes for msntrf: {'derived': 'rlds-rlus', 'paramId': '172177', 'long_name': 'Mean surface net thermal radiation flux', 'units': 'W m**-2', 'cfVarName': 'msntrf', 'shortName': 'msntrf'}\n",
-      "msntrf : W m-2 --> W m**-2\n",
-      "<class 'pint.util.Quantity'> <class 'pint.util.Quantity'>\n",
-      "Fixing msntrf to msntrf. Unit fix: factor=1.0, offset=0\n",
-      "Derived mtntrf from 0-rlut\n",
-      "Grib attributes for mtntrf: {'derived': '0-rlut', 'paramId': '172179', 'long_name': 'Mean top net thermal radiation flux', 'units': 'W m**-2', 'cfVarName': 'mtntrf', 'shortName': 'mtntrf'}\n",
-      "mtntrf : W m-2 --> W m**-2\n",
-      "<class 'pint.util.Quantity'> <class 'pint.util.Quantity'>\n",
-      "Fixing mtntrf to mtntrf. Unit fix: factor=1.0, offset=0\n",
-      "Grib attributes for msdsrf: {'paramId': '172169', 'long_name': 'Mean surface downward solar radiation flux', 'units': 'W m**-2', 'cfVarName': 'msdsrf', 'shortName': 'msdsrf'}\n",
-      "msdsrf : W m-2 --> W m**-2\n",
-      "<class 'pint.util.Quantity'> <class 'pint.util.Quantity'>\n",
-      "Fixing rsds to msdsrf. Unit fix: factor=1.0, offset=0\n",
-      "Derived msnsrf from rsds-rsus\n",
-      "Grib attributes for msnsrf: {'derived': 'rsds-rsus', 'paramId': '172176', 'long_name': 'Mean surface net solar radiation flux', 'units': 'W m**-2', 'cfVarName': 'msnsrf', 'shortName': 'msnsrf'}\n",
-      "msnsrf : W m-2 --> W m**-2\n",
-      "<class 'pint.util.Quantity'> <class 'pint.util.Quantity'>\n",
-      "Fixing msnsrf to msnsrf. Unit fix: factor=1.0, offset=0\n",
-      "Derived mtnsrf from rsdt-rsut\n",
-      "Grib attributes for mtnsrf: {'derived': 'rsdt-rsut', 'paramId': '172178', 'long_name': 'Mean top net solar radiation flux', 'units': 'W m**-2', 'cfVarName': 'mtnsrf', 'shortName': 'mtnsrf'}\n",
-      "mtnsrf : W m-2 --> W m**-2\n",
-      "<class 'pint.util.Quantity'> <class 'pint.util.Quantity'>\n",
-      "Fixing mtnsrf to mtnsrf. Unit fix: factor=1.0, offset=0\n"
+      "Fixing pr to tprate. Unit fix: factor=0.001, offset=0\n"
      ]
     }
    ],
