Skeleton symlink and grib indices

--- a/cli/gribber/gribscan_test.ipynb
+++ b/cli/gribber/gribscan_test.ipynb
@@ -2,11 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import gribscan_json_generator as gjg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gribber class:\n",
+      "  model: model name (default: IFS)\n",
+      "  exp: experiment name (default: tco1279)\n",
+      "  source: source name (default: ICMGG_atm2d)\n",
+      "  nprocs: number of processors (default: 4)\n",
+      "  verbose: print help message (default: True)\n",
+      "  dir: dictionary with directories (default: see below)\n",
+      "  tmpdir: temporary directory (default: /scratch/b/b382289/gribscan)\n",
+      "  jsondir: JSON directory (default: /work/bb1153/b382289/gribscan-json)\n",
+      "  catalogdir: catalog directory (default: /work/bb1153/b382289/AQUA/config/levante/catalog)\n",
+      "  griblist: dictionary with GRIB files (default: see gribber.yml)\n",
+      "  tgt_json: target JSON file (default: see gribber.yml)\n",
+      "  catalogfile: catalog file (default: see gribber.yml)\n",
+      "  jsonfile: JSON file (default: see gribber.yml)\n",
+      "Creating /scratch/b/b382289/gribscan/tco1279...\n",
+      "Creating /work/bb1153/b382289/gribscan-json/tco1279...\n",
+      "ICMGG\n",
+      "atm2d\n",
+      "Creating symlinks...\n",
+      "[]\n",
+      "Creating GRIB indices...\n",
+      "CompletedProcess(args=['gribscan-index', '-n', '4'], returncode=2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "usage: gribscan-index [-h] [-n [NPROCS]] GRIB [GRIB ...]\n",
+      "gribscan-index: error: the following arguments are required: GRIB\n"
+     ]
+    }
+   ],
+   "source": [
+    "test1 = gjg.Gribber(verbose=True)"
    ]
   },
   {
@@ -18,16 +64,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating /scratch/b/b382289/gribscan/tco1279...\n",
-      "Creating /work/bb1153/b382289/gribscan-json/tco1279...\n"
+      "ICMGG\n",
+      "atm2d\n"
      ]
     }
    ],
    "source": [
-    "test1 = gjg.Gribber(expid='tco1279',nprocs=4,\n",
-    "                    tmpdir='/scratch/b/b382289/gribscan',\n",
-    "                    jsondir='/work/bb1153/b382289/gribscan-json')"
+    "string = 'ICMGG_atm2d'\n",
+    "parts = string.split('_')\n",
+    "\n",
+    "part1 = parts[0]   # ICMGG\n",
+    "part2 = parts[1]   # atm2d\n",
+    "\n",
+    "print(part1)\n",
+    "print(part2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
