--- a/cli/gribber/gribscan_test.ipynb
+++ b/cli/gribber/gribscan_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -25,6 +25,7 @@
       "  nprocs: number of processors (default: 4)\n",
       "  verbose: print help message (default: True)\n",
       "  dir: dictionary with directories (default: see below)\n",
+      "  datadir: data directory (default: /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2)\n",
       "  tmpdir: temporary directory (default: /scratch/b/b382289/gribscan)\n",
       "  jsondir: JSON directory (default: /work/bb1153/b382289/gribscan-json)\n",
       "  catalogdir: catalog directory (default: /work/bb1153/b382289/AQUA/config/levante/catalog)\n",
@@ -36,18 +37,25 @@
       "Creating /work/bb1153/b382289/gribscan-json/tco1279...\n",
       "ICMGG\n",
       "atm2d\n",
+      "ICMGG????+*\n",
       "Creating symlinks...\n",
-      "[]\n",
+      "Searching in...\n",
+      "/scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGG????+*\n",
+      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000064 already exists in /scratch/b/b382289/gribscan/tco1279\n",
+      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000040 already exists in /scratch/b/b382289/gribscan/tco1279\n",
+      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000096 already exists in /scratch/b/b382289/gribscan/tco1279\n",
+      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000024 already exists in /scratch/b/b382289/gribscan/tco1279\n",
+      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000048 already exists in /scratch/b/b382289/gribscan/tco1279\n",
+      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000056 already exists in /scratch/b/b382289/gribscan/tco1279\n",
+      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000032 already exists in /scratch/b/b382289/gribscan/tco1279\n",
+      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000088 already exists in /scratch/b/b382289/gribscan/tco1279\n",
+      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000016 already exists in /scratch/b/b382289/gribscan/tco1279\n",
+      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000008 already exists in /scratch/b/b382289/gribscan/tco1279\n",
+      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000080 already exists in /scratch/b/b382289/gribscan/tco1279\n",
+      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000000 already exists in /scratch/b/b382289/gribscan/tco1279\n",
+      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000072 already exists in /scratch/b/b382289/gribscan/tco1279\n",
       "Creating GRIB indices...\n",
-      "CompletedProcess(args=['gribscan-index', '-n', '4'], returncode=2)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "usage: gribscan-index [-h] [-n [NPROCS]] GRIB [GRIB ...]\n",
-      "gribscan-index: error: the following arguments are required: GRIB\n"
+      "CompletedProcess(args=['gribscan-index', '-n', '4', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000056', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000024', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000024.index', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000072.index', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000016', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000080', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000096', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000088', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000008', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000008.index', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000040', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000056.index', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000048.index', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000000.index', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000016.index', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000096.index', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000040.index', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000000', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000080.index', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000064.index', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000064', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000032', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000072', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000088.index', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000032.index', '/scratch/b/b382289/gribscan/tco1279/ICMGGhr2n+000048'], returncode=0)\n"
      ]
     }
    ],
