moved to aqua framework, working in the package

--- a/cli/gribber/gribscan_test.ipynb
+++ b/cli/gribber/gribscan_test.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gribscan_json_generator as gjg"
+    "from aqua import Gribber"
    ]
   },
   {
@@ -68,15 +68,8 @@
     }
    ],
    "source": [
-    "test1 = gjg.Gribber(verbose=True)"
+    "test1 = Gribber(verbose=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
