--- a/cli/gribber/gribscan_test.ipynb
+++ b/cli/gribber/gribscan_test.ipynb
@@ -1,12 +1,44 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Gribber class"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from aqua import Gribber"
+    "from aqua.gribber import Gribber\n",
+    "from aqua.util import load_yaml"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `Gribber` class from the `aqua` framework checks the availability of grib files in a specified directory `datadir` for a specific experiment and creates `.index` files and a `.json` file.\n",
+    "It also automatically updates the catalog `yaml` file.\n",
+    "\n",
+    "It takes as input:\n",
+    "- `model`: model name (default: `IFS`)\n",
+    "- `exp`: experiment name (default: `tco1279-orca025`)\n",
+    "- `source`: source name (default: `ICMGG_atm2d`)\n",
+    "- `nprocs`: number of processors (default: `4`)\n",
+    "- `dir`: dictionary with directories (defaults working on levante):\n",
+    "    - `datadir`: data directory (default: `/scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2`)\n",
+    "    - `tmpdir`: temporary directory (default: `/scratch/b/b382289/gribscan`)\n",
+    "    - `jsondir`: JSON directory (default: `/work/bb1153/b382289/gribscan-json`)\n",
+    "    - `catalogdir`: catalog directory (default: `/work/bb1153/b382289/AQUA/config/levante/catalog`)\n",
+    "- `verbose`: print help message (default: `False`)\n",
+    "- `replace`: replace existing files (default: `False`)\n",
+    "\n",
+    "The directories can be also specified in a `yaml` file."
    ]
   },
   {
@@ -35,9 +67,7 @@
       "  jsonfile: JSON file (default: see gribber.yml)\n",
       "Creating /scratch/b/b382289/gribscan/tco1279-orca025...\n",
       "Creating /work/bb1153/b382289/gribscan-json/tco1279-orca025...\n",
-      "ICMGG\n",
-      "atm2d\n",
-      "ICMGG????+*\n",
+      "Gribfile wildcard: {self.gribfiles}\n",
       "Creating symlinks...\n",
       "Searching in...\n",
       "/scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGG????+*\n",
@@ -68,7 +98,16 @@
     }
    ],
    "source": [
-    "test1 = Gribber(verbose=True)"
+    "mygrib = Gribber(verbose=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since for the example we used a subset of the original grib files, we need to specify the `replace` option to `False`, in order to not overwrite the already existing entry in the catalogue.\n",
+    "However, since the folder in which `.index` and `.json` files are stored is different from the one in which the original grib files are stored, the first time that the `Gribber` class is called, they have been created."
    ]
   }
  ],
